--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 #This file lists all the contributors to this repositiory.
 
 Ola-Akande Gboluwaga Ayokunle <theayokayzy1@gmail.com> 
+Olaoluwa Dolapo Idowu <dollipissulelectrical16@gmail.com>
 
